@@ -1,3 +1,7 @@
+phist-1.9.3
+  - resolve pthreads dependency via gtest (assume pthreads available if OpenMP is) 
+  - fix compiling with ghost but without MPI
+  
 phist-1.9.2
   - fix some issues with Tpetra from Trilinos 13 (API change)
   - fix problem with Fortran interface and Tpetra
